@@ -10,6 +10,7 @@ extern gboolean     vwidth;
 extern gboolean     nocolour;
 extern gchar       *new_fn;
 extern gchar       *opt_lx;
+extern gchar       *script;
 extern gchar       *rows_v;
 extern GOptionEntry entries[];
 
